// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo agent web delete "frodo agent web delete --agent-id frodo-test-web-agent": should display error when the web agent with id 'frodo-test-web-agent' cannot be deleted since it does not exist 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1701807230743 [b672336b-41ef-428d-ae4a-e0c082875377]
Error deleting web agent frodo-test-web-agent
  Web agent 'frodo-test-web-agent' not found!
"
`;

exports[`frodo agent web delete "frodo agent web delete --all": should do nothing when no web agent can be deleted 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1701807230743 [b672336b-41ef-428d-ae4a-e0c082875377]
"
`;

exports[`frodo agent web delete "frodo agent web delete -a": should delete all web agents 1`] = `""`;

exports[`frodo agent web delete "frodo agent web delete -i frodo-test-web-agent": should delete the web agent with id 'frodo-test-web-agent' 1`] = `""`;
